Beamer can now draw on projector

--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.Calibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.Calibration.csproj
@@ -39,8 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Calibration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KinectAutoCalibration.Beamer\KinectAutoCalibration.Beamer.csproj">
+      <Project>{b7690c6f-242e-46b5-a9bb-7a00d43cfa40}</Project>
+      <Name>KinectAutoCalibration.Beamer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
