--- a/KinectAutoCalibration.Common/KinectAutoCalibration.Common.csproj
+++ b/KinectAutoCalibration.Common/KinectAutoCalibration.Common.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\ChangeOfBasis.cs" />
     <Compile Include="Point2D.cs" />
     <Compile Include="Vector2D.cs" />
     <Compile Include="Algorithms\KMeans.cs" />
