--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.Calibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.Calibration.csproj
@@ -34,6 +34,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +51,10 @@
     <ProjectReference Include="..\KinectAutoCalibration.Beamer\KinectAutoCalibration.Beamer.csproj">
       <Project>{b7690c6f-242e-46b5-a9bb-7a00d43cfa40}</Project>
       <Name>KinectAutoCalibration.Beamer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\KinectAutoCalibration.Kinect\KinectAutoCalibration.Kinect.csproj">
+      <Project>{DC908959-89E9-487A-A54E-868465DB099C}</Project>
+      <Name>KinectAutoCalibration.Kinect</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
