--- a/WindowsTest/BeamerControl.csproj
+++ b/WindowsTest/BeamerControl.csproj
@@ -100,9 +100,9 @@
       <Project>{B7690C6F-242E-46B5-A9BB-7A00D43CFA40}</Project>
       <Name>KinectAutoCalibration.Beamer</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KinectAutoCalibration.Calibration\KinectAutoCalibration.Calibration.csproj">
+    <ProjectReference Include="..\KinectAutoCalibration.Calibration\KinectAutoCalibration.KinectCalibration.csproj">
       <Project>{d30a1c6e-21bb-4175-a19d-b152c53e766f}</Project>
-      <Name>KinectAutoCalibration.Calibration</Name>
+      <Name>KinectAutoCalibration.KinectCalibration</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
