--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
@@ -44,7 +44,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calibration.cs" />
+    <Compile Include="IKinectCalibration.cs" />
+    <Compile Include="KinectCalibration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
