--- a/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1/WpfApplication1.csproj
@@ -94,6 +94,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\KinectAutoCalibration.Beamer\KinectAutoCalibration.Beamer.csproj">
+      <Project>{B7690C6F-242E-46B5-A9BB-7A00D43CFA40}</Project>
+      <Name>KinectAutoCalibration.Beamer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\KinectAutoCalibration.Calibration\KinectAutoCalibration.KinectCalibration.csproj">
       <Project>{d30a1c6e-21bb-4175-a19d-b152c53e766f}</Project>
       <Name>KinectAutoCalibration.KinectCalibration</Name>
