--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration - Copy.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration - Copy.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{D30A1C6E-21BB-4175-A19D-B152C53E766F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KinectAutoCalibration.Calibration</RootNamespace>
