--- a/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
+++ b/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
@@ -44,9 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Beamer.cs" />
+    <Compile Include="BeamerControl.cs" />
+    <Compile Include="BeamerImage.cs" />
     <Compile Include="BeamerTest.cs" />
     <Compile Include="Interfaces\IBeamer.cs" />
-    <Compile Include="Interfaces\IBeamerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
