--- a/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
+++ b/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BeamerImage.cs" />
     <Compile Include="Interfaces\IBeamerControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategy\IBeamerCorrectionStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KinectAutoCalibration.Common\KinectAutoCalibration.Common.csproj">
