--- a/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
+++ b/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
@@ -48,7 +48,10 @@
     <Compile Include="BeamerImage.cs" />
     <Compile Include="Interfaces\IBeamerControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AreaPoint2D.cs" />
     <Compile Include="Strategy\IBeamerCorrectionStrategy.cs" />
+    <Compile Include="Strategy\LinearCorrection.cs" />
+    <Compile Include="Point2D.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KinectAutoCalibration.Common\KinectAutoCalibration.Common.csproj">
