--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
@@ -46,8 +46,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IAutoKinectCalibration.cs" />
-    <Compile Include="AutoKinectCalibration.cs" />
+    <Compile Include="Interfaces\IAutoKinectBeamerCalibration.cs" />
+    <Compile Include="AutoKinectBeamerCalibration.cs" />
+    <Compile Include="Interfaces\IKinectBeamerCalibration.cs" />
+    <Compile Include="KinectBeamerCalibration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
