--- a/KinectAutoCalibration.Kinect/KinectAutoCalibration.Kinect.csproj
+++ b/KinectAutoCalibration.Kinect/KinectAutoCalibration.Kinect.csproj
@@ -49,7 +49,7 @@
     <Compile Include="KinectConverters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Algorithms\RecoverDepthInformation.cs" />
-    <Compile Include="Algorithms\RealWorld.cs" />
+    <Compile Include="Algorithms\RealWorldCalculation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KinectAutoCalibration.Common\KinectAutoCalibration.Common.csproj">
