--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
@@ -55,6 +55,8 @@
     <Compile Include="AutoKinectBeamerCalibration.cs" />
     <Compile Include="Interfaces\ICalibration.cs" />
     <Compile Include="Interfaces\IKinectBeamerCalibration.cs" />
+    <Compile Include="Interfaces\IKinectBeamerOperation.cs" />
+    <Compile Include="Interfaces\KinectBeamerOperation.cs" />
     <Compile Include="KinectBeamerCalibration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TempCalibration.cs" />
@@ -72,9 +74,6 @@
       <Project>{DC908959-89E9-487A-A54E-868465DB099C}</Project>
       <Name>KinectAutoCalibration.Kinect</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
