--- a/KinectAutoCalibration.Common/KinectAutoCalibration.Common.csproj
+++ b/KinectAutoCalibration.Common/KinectAutoCalibration.Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\ChangeOfBasis.cs" />
+    <Compile Include="KinectPointArrayHelper.cs" />
     <Compile Include="Point\AreaPoint.cs" />
     <Compile Include="Point\BeamerPoint.cs" />
     <Compile Include="BitmapHelper.cs" />
