--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
@@ -51,8 +51,8 @@
     <Compile Include="CalibrateGrid.cs" />
     <Compile Include="Calibration.cs" />
     <Compile Include="ConvertToRealWorldStrategy.cs" />
-    <Compile Include="IBeamerToKinectStrategy.cs" />
-    <Compile Include="IKinectToRealWorldStrategy.cs" />
+    <Compile Include="Interfaces\IBeamerToKinectStrategy.cs" />
+    <Compile Include="Interfaces\IKinectToRealWorldStrategy.cs" />
     <Compile Include="Interfaces\IAutoKinectBeamerCalibration.cs" />
     <Compile Include="AutoKinectBeamerCalibration.cs" />
     <Compile Include="Interfaces\ICalibration.cs" />
