--- a/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
+++ b/KinectAutoCalibration.Beamer/KinectAutoCalibration.Beamer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BeamerWindow.cs" />
     <Compile Include="CalibrationImage.cs" />
     <Compile Include="Interfaces\IBeamerWindow.cs" />
+    <Compile Include="OperationImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategy\IBeamerCorrectionStrategy.cs" />
     <Compile Include="Strategy\LinearCorrection.cs" />
