--- a/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
+++ b/KinectAutoCalibration.Calibration/KinectAutoCalibration.KinectCalibration.csproj
@@ -46,6 +46,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeamerToKinect.cs" />
     <Compile Include="CalculateToRealWorldStrategy.cs" />
     <Compile Include="CalibrateEdgePoints.cs" />
     <Compile Include="CalibrateGrid.cs" />
@@ -60,7 +61,9 @@
     <Compile Include="Interfaces\IKinectBeamerOperation.cs" />
     <Compile Include="KinectBeamerOperation.cs" />
     <Compile Include="KinectBeamerCalibration.cs" />
+    <Compile Include="KinectToRealWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RealWorldToArea.cs" />
     <Compile Include="TempCalibration.cs" />
   </ItemGroup>
   <ItemGroup>
